apps/keys/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keys-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-tls@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - keys.hubbe.club
      secretName: keys-cert
  rules:
    - host: keys.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keys-nginx
                port:
                  number: 80
